--- a/lab6/6.md
+++ b/lab6/6.md
@@ -1,6 +1,15 @@
-Alright! Let's begin by designing **Lab 4: ** using the provided Superstore data.
 
+# 📘 Lab 6: Mastering Table Calculations in Tableau
 
+#### Objective:
+
+In this lab, you will:
+
+1. Connect Tableau to sales data.
+2. Explore and apply various quick table calculations, including running sums and year-over-year growth.
+3. Understand and configure addressing and partitioning for table calculations.
+4. Utilize a range of advanced table calculation functions such as INDEX(), First(), Last(), Size(), LOOKUP(), Previous_Value(), RUNNING_MIN(), RUNNING_SUM(), WINDOW_MAX(), WINDOW_SUM(), RANK(), and TOTAL().
+5. Analyze sales performance across different dimensions using these powerful calculation techniques.
 
 ---
 
@@ -14,6 +23,8 @@ Alright! Let's begin by designing **Lab 4: ** using the provided Superstore data
 
 Double tap in sheet 1 and rename it as **Quick Table Calc - Running Sum Report**
 
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_6/1.png?raw=true)
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_6/1.2.png?raw=true)
 
 ---
 
@@ -23,10 +34,14 @@ Double tap in sheet 1 and rename it as **Quick Table Calc - Running Sum Report**
 **Steps**:
 
 Duplicate the report 1. 
-1. Drop Region and Department in Columns
-2. Drop Oder date twice in Rows. Change them to Year and Quarter respectively.
-3. Drop Region (East & West) and `Order Date(Year)` in Filter
+
+1. Drop `Region` and `Department` in **Columns**
+2. Drop `Order date` twice in **Rows**. Change them to **Year** and **Quarter** respectively.
+3. Drop `Region (East & West)` and `Order Date(Year)` in Filter
 3. Drop `Sales` in **Text**
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_6/2.png?raw=true)
+
 ---
 
 ### ✅ **Report 3: Addressing and Partitioning Report**
@@ -44,6 +59,9 @@ Drop this in Text
 2. Do a table calculation to the INDEX() as below:
 
 
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_6/3.png?raw=true)
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_6/3.2.png?raw=true)
 
 
 ----
@@ -52,7 +70,7 @@ Drop this in Text
 
 1. Drop `Measure Names` in Columns
 2. Drop `Department` and `Category` in Rows
-3. Ceate Calculated fields as follows:
+3. Create Calculated fields as follows:
 
 First - First()
 Last- Last()
@@ -61,6 +79,11 @@ Size - Size()
 4. Drop `Measure Names` in the Filters (choose First along Category , Last along Category , Index along Category, Size along Category)
 5. Drop `Measure Values` in **Text**
 Add a table calculation for all the fields (Set it to Specific Dimensions - Category)
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_6/4.png?raw=true)
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_6/5.png?raw=true)
+
 -----
 
 ### ✅ **Report 5: Lookup and Previous Value Report**
@@ -78,7 +101,12 @@ ATTR([Category])`
 - Previous Value
 
 3. Add table calculations to the fields Lookup and Previous Value as below
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_6/6.png?raw=true)
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_6/6.2.png?raw=true)
 --------
+
 ### ✅ **Report 6: Running Functions Report**
 
 Just duplicate Report 5. 
@@ -102,10 +130,14 @@ Just duplicate Report 5.
 
 `RUNNING_SUM(SUM([Sales]))`
 
-5. Drop Measure Names in Filters and choose ( Sales, Running Min of Sales, Running Sum of Sales)
+5. Drop `Measure Names` in **Filters** and choose ( Sales, Running Min of Sales, Running Sum of Sales)
 6. Drop `Measure Values` in **Text**
 
 6. Add table configuration for (Running Min of Sales, Running Sum of Sales) as follows
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_6/7.png?raw=true)
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_6/7.2.png?raw=true)
 
 -----
 
@@ -120,8 +152,12 @@ Duplicate report 6
 2. For `Measure Names` in Filters and choose ( Sales, Window Max, Window Sum)
 3. Add table configuration for (Window Max, Window Sum) as follows
 
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_6/8.png?raw=true)
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_6/8.2.png?raw=true)
 
  -----
+ 
  ### ✅ **Report 8: Rank Functions  Report**
 
 
@@ -129,10 +165,14 @@ Duplicate report 7
 
 1. Create calculated field `Rank` with formula
 `RANK(SUM(Sales))`
-2. Just remove the fields Window Max, Window Sum from the filters and keep `Sales` and `Rank`
+2. Just remove the fields **Window Max, Window Sum** from the filters and keep `Sales` and `Rank`
 
 Add table configuration for Rank as follows
 
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_6/9.png?raw=true)
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_6/9.2.png?raw=true)
 
 ---------
 
@@ -141,6 +181,10 @@ Add table configuration for Rank as follows
 1. Drop `Order Date` in Columns twice, once as **Year** and **Quarter**
 2. Drop `Sales` in Rows. For the second Sum(sales) add a table calculation as below
 3. Set the second Sum(sales) to Bar in Marks card 
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_6/10.png?raw=true)
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_6/10.2.png?raw=true)
 
 ------------
 ### ✅ **Report 10 : Sales Per State Report**
@@ -157,5 +201,9 @@ Size - `Size()`
 Add table configuration for the above fields as follows
 
 4. Drop **Region** in Filters and choose `Central` and `South`
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_6/11.png?raw=true)
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_6/11.2.png?raw=true)
 
 ---
