--- a/lab9/9.md
+++ b/lab9/9.md
@@ -13,6 +13,8 @@ In this lab, you will:
 
 ---
 
+**Important steps to follow prior to the lab:**
+
 1. Import the files World Population, Real Estate and Testing Prediction (Microsoft access file)
 
 3. In order to import the database file, you need to download access database engine.
