--- a/lab10/10.md
+++ b/lab10/10.md
@@ -1,8 +1,4 @@
-Alright! Let's begin by designing **Lab 4: ** using the provided Superstore data.
 
-
-
----
 
 
 
@@ -12,13 +8,15 @@ Alright! Let's begin by designing **Lab 4: ** using the provided Superstore data
 1. Drag **Order Date** to the Columns shelf.(Set to Year)
 2. Drop **Sales** in Rows ( Double tap and enter `Rank(Sum(Sales))` )
 3. Drop **Order Date** in filters (Choose year)
-4. Drop Region -> West
-5. Drop State in Label
-6. Add a table calculation for Sales. Choose states in Specifc Dimensions
+4. Drop `Region` -> West in filters
+5. Drop `State` in **Label**
+6. Add a table calculation for Sales. Choose **states** in Specifc Dimensions
 
 Set the label configuration as below and also set the visual to Entire View
 
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_10/1.png?raw=true)
 
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_10/1.1.png?raw=true)
 
 ---
 
@@ -26,6 +24,8 @@ Set the label configuration as below and also set the visual to Entire View
 
 Just duplicate the above report. Remove Order date from the Filters. 
 
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_10/2.png?raw=true)
 
 ---
 
@@ -35,9 +35,13 @@ Just duplicate the above report. Remove Order date from the Filters.
 1. Drag **Department**  and `Category` to the Columns shelf.
 2. Drop **Profit** in Rows follow the below configuration
 
-3. Drop Profit in Color and Size
-4. Double tap on  Profit and enter -SUM([Profit])
-5. In Marks card and choose Gantt Bar
+3. Drop `Profit` in **Color** and **Size**
+4. Double tap on ` Profit and enter -SUM([Profit])`
+5. In **Marks** card and choose **Gantt** Bar
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_10/3.png?raw=true)
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_10/3.1.png?raw=true)
 
 ----
 
@@ -48,10 +52,14 @@ Just duplicate the above report. Remove Order date from the Filters.
 2. Drop **Profit** in Rows follow the below configuration
 
 3. Drop `Category` in filters. Choose all the items.
-4. Add Profit in Color
-5. Set the Marks Card to Line type. Once you set that, you will be able to see the path option. You can set the line type to Step.
+4. Add `Profit` in **Color**
+5. Set the **Marks** Card to Line type. Once you set that, you will be able to see the path option. You can set the line type to Step.
 
 Change the view to Entire View
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_10/4.png?raw=true)
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_10/4.1.png?raw=true)
 
 -----
 
@@ -74,7 +82,11 @@ Change the view to Entire View
 
 5. For Sales set it as Line and for Last sales as Circle
 
-Change the Type as Fit Height
+Change the Type as **Fit Height**
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_10/5.png?raw=true)
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_10/5.1.png?raw=true)
 
 -----
 
@@ -84,10 +96,14 @@ Change the Type as Fit Height
 
 1. Drag **Profit** to the Columns shelf twice.
 2. Drop **Category** in Rows 
-3. Add Region to Filters( Choose West and East)
+3. Add `Region` to Filters( Choose West and East)
 
-4. For one of Sum(Profit) set it to Line. Pull Region to path
-5. For another Sum(Profit) set it to Circle. Pull Region to Color
+4. For one of `Sum(Profit)` set it to Line. Pull Region to path
+5. For another `Sum(Profit)` set it to Circle. Pull Region to Color
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_10/6.png?raw=true)
+
+
  -----
  ### ✅ **Report 7: Unit Chart Report**
 
@@ -100,9 +116,13 @@ Change the Type as Fit Height
 
 Drop this field in Filters and set as True
 
-3. Drop Customer Id in detail.
-4. Under Marks Card choose shape as Type.
+3. Drop `Customer Id` in detail.
+4. Under **Marks** Card choose shape as Type.
 5. Click on the Shape -> More shapes -> Gender , choose any gender for icons
+
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_10/7.png?raw=true)
+
 
 ---------
 
@@ -138,13 +158,24 @@ Sales -> Label twice
 
 Set Marks card to Bar type
 
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_10/8.png?raw=true)
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_10/8.1.png?raw=true)
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_10/8.2.png?raw=true)
+
+------------------
+
+
 ### ✅ **Report 9 : Sales v. Profit**
 
 1. Drag **Profit** to the Columns shelf.
 2. Drop **Sales** and Type of Sale in Rows 
 3. Region to Filters. Set Use all
-4. Drop Department in Color and Label
+4. Drop `Departmen`t in Color and Label
 Turn on animation using the menu option: Format | Animations...
 
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_10/9.png?raw=true)
 
 ---
