--- a/lab10/10.md
+++ b/lab10/10.md
@@ -1,5 +1,14 @@
 
+# 📘 Lab 10: Advanced Charting and Table Calculations in Tableau
 
+#### Objective:
+
+In this lab, you will:
+
+1. Connect Tableau to Superstore data to perform sophisticated analysis.
+2. Master the creation of advanced chart types, including Bump Charts, Waterfall Charts, Step Line Charts, Spark Lines, Dumbbell Charts, Unit Charts, and Marimekko Charts.
+3. Apply complex table calculations such as ranking, window functions, and nested calculations to derive deeper insights.
+4. Utilize advanced formatting and animation techniques to enhance data visualization and storytelling.
 
 
 ### ✅ **Report 1:Change in State Rankings for West Region Report**
