--- a/lab13/13.md
+++ b/lab13/13.md
@@ -1,5 +1,15 @@
-Alright! Let's begin by designing **Lab 13** using the provided Superstore data.
 
+# 📘 Lab 13: Patient & Service Performance Analysis
+
+#### Objective:
+
+In this lab, you will:
+
+1. Connect Tableau to patient visit data and potentially other relevant datasets.
+2. Analyze patient visit frequency by individual and primary diagnosis.
+3. Explore various patient-related metrics, including age and visit counts, through multi-measure reports.
+4. Visualize average service times by location, utilizing customized shapes, colors, and sizes for enhanced insights into location types.
+5. Apply different aggregation methods to derive meaningful averages and sums from the data.
 
 
 ---
@@ -7,16 +17,20 @@ Alright! Let's begin by designing **Lab 13** using the provided Superstore data.
 ### ✅ **Report 1: How Many Visits for each Patient? Report**
 
 
-1. Drag Name to the Rows shelf.
-3. Drop Hospital Visit in Text.
+1. Drag `Name` to the **Rows** shelf.
+3. Drop `Hospital Visit` in Text.
 
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_13/1.png?raw=true)
+
+--------------
 
 
 ### ✅ **Report 2: How many visits? Patients & Diagnosis Map**
 
-1. Drag Name and Primary Diagnosis to the Rows shelf.
-3. Drop Hospital Visit in Text.
+1. Drag `Name` and` Primary Diagnosis` to the **Rows** shelf.
+3. Drop `Hospital Visit` in **Text**.
 
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_13/2.png?raw=true)
 
 ---
 
@@ -24,10 +38,11 @@ Alright! Let's begin by designing **Lab 13** using the provided Superstore data.
 
 **from Real Estate**
 
-1. Drag Measure Names to the Columns shelf.
-2. Drag Name and Primary Diagnosis to the Rows shelf.
-3. Drop Measure Names in filters and Text under amrsk card
+1. Drag `Measure Names` to the **Columns** shelf.
+2. Drag `Name` and `Primary Diagnosis` to the **Rows** shelf.
+3. Drop `Measure Names` in **filters** and Text under Marks card
 
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_13/3.png?raw=true)
 
 ---
 
@@ -45,103 +60,15 @@ Set them to Average
 
 Click on the shape card and change the shapes for Hospital and Patient Residence as per your choice
 
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_13/4.png?raw=true)
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_13/4.1.png?raw=true)
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_13/4.2.png?raw=true)
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_13/4.3.png?raw=true)
+
+![](https://github.com/Neha-Chiluka/tableau-fundamentals/blob/master/pic_13/4.4.png?raw=true)
+
 ----
-
-### ✅ **Report 5: Lines **
-
-1. Drag Longitude to the Columns shelf.
-2. Drag Latitude to the Rows shelf.
-3.Drop Line and Id in Detail.
-
-For Line , set the measure to collect.
-
-4. Create a calculated field 
-
-**Distance to the Hospital**
-
-`
-DISTANCE(
-    MAKEPOINT([Hospital Latitude], [Hospital Longitude]),
-    MAKEPOINT([Latitude], [Longitude]),
-    'mi'
-)
-`
-
-
-Drop this field in Tooltip
-
-
-
------
-
-### ✅ **Report 6: Buffer **
-
-1. Drag Longitude to the Columns shelf.
-2. Drag Latitude to the Rows shelf. Twice
-
-Click on the arrow of Latitude and set to dual axis
-
-3. In one of the latitude. drop ID latitude , longitude and location type in detail. Set the marks card to circle
-4. In other latitude drop Hospital radius to Detail. Set the measure to collect.
-
-For that create a calculated field using the below formula
-
-**Formula**
-
-`IF [Location Type] == "Hospital"
-THEN BUFFER(MAKEPOINT([Latitude], [Longitude]), 3, 'mi')
-END`
-
---------
-
-### Report 7 : Average House Prices
-
-1. Drag Longitude to the Columns shelf.
-2. Drag Latitude to the Rows shelf. 
-3. Create a group for Zip and configure as below
-
-78702, 78717, 78721 and 16 more
-78732, 78734, 78735 and 4 more
-Other
-
-4. Drop Zip code group field in Color
-5. Drop Price in label
-
-
------------------
-### Report 8:  Average House Prices by Region
-
-
-1. Drag Longitude to the Columns shelf.
-2. Drag Latitude to the Rows shelf. 
-3. Drop Region in Color
-4. Drop Price in Label and change its measure to average
-
-
---------
-
-### Report 9:  Dual Axis Map
-
-
-1. Drag Longitude to the Columns shelf.
-2. Drag Latitude to the Rows shelf.  (Twice)
-3. In one of the latitude. Drop Profit in Color and State in Detail
-4. In other latitude drop Sales in Size and Postal code in detail. Set Marks card to circle.
-
-----------
-
-### Report 10: Washed Out Map
-
-1. Drag Longitude to the Columns shelf.
-2. Drag Latitude to the Rows shelf. 
-3. Drop Profit in Color and State in Detail
-
-
--------------
-### Report 11: Number of Patients per Room.
-1. Drag X to the Columns shelf.
-2. Drag Floor and Y to the Rows shelf. 
-3. Drop Number of Patients in Size. Change the marks card to circle.
-
-----------
 
